# PaxeraHealth-AI

./: .env.example  INSTALLATION.md  LICENSE  README.md  STRUCTURE.md  pyproject.toml
models/: Download-Models.txt
notebooks/: 01_Task_Description_AI_Candidate_Test.ipynb
presentations/: AI_Segmentation_Presentation.pptx
scripts/: generate_presentation.py  get_notebook_results.py
web_app/: run_app.bat
web_app/backend/: __init__.py  app.py  config.py  model.py  requirements.txt
web_app/frontend/: __init__.py  index.html  script.js  styles.css
